--- a/style.css
+++ b/style.css
@@ -613,3 +613,130 @@ header span {
         transform: translateY(0px);
     }
 }
+
+
+
+
+/* Medias */
+
+@media (max-width:1200px){
+    .container{
+        padding: 0;
+        padding: 0 3em;
+    }
+}
+@media (max-width:900px){
+    .welcome-header{
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+    }
+    .logo{
+        margin: 0;
+    }
+    .welcome{
+        left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
+    .chat-box{
+        left: 240px;
+        top: -90px;
+    }
+    .container{
+        flex-direction: column;
+    }
+    .left{
+        width: 100%;
+        display: flex;
+    }
+    .profile{
+        display: grid;
+        padding: 40px;
+        grid-template-columns:repeat(3, 1fr);
+        grid-template-rows: 10vh 10vh 10vh;
+    }
+    .profile-pic-area{
+        grid-area: 1/1/2/4;
+        width: auto;
+        height: auto;
+    }
+    .profile-pic-area img{
+    max-width: 28vw;
+    max-height: 30vh;
+    }
+    .user-area{
+        grid-area: 1/2/3/2;
+        margin-top: 0;
+        margin-left: 24px;
+    }
+    .bio-area{
+        grid-area: 3/2/4/4;
+        margin-top: 0;
+        margin-left: 24px;
+        max-width: 430px;
+    }
+    .info{
+        grid-area: 3/4/1/3;
+        margin-top: 0;
+    }
+    .info-localization{
+        margin-top: 10px;
+    }
+    .right{
+        width: 100%;
+        padding: 0;
+       margin: 0;
+       padding: 40px;
+       padding-top: 0;
+    }
+    #ChangeUser{
+        right: -30px;
+    }
+}
+@media (max-width:600px){
+    .welcome h2{
+        font-size: 32px;
+    }
+    .welcome h4{
+        font-size: var(--small-size);
+    }
+    .btn-start-git{
+        margin-top: 50px;
+    }
+    .welcome-header span{
+        font-size: var(--med-font-size);
+    }
+    .box-input{
+        width: 320px;
+        height: 430px;
+    }
+    .chat-box{
+        width: 220px;
+        height: 90px;
+        left: 50%;
+        transform: translateX(-50%);
+        top: -20px;
+    }
+    .chat-box span{
+        font-size: 12px;
+        margin-left: 12px;
+        margin-top: 35px;
+       
+    }
+    .chat-box::after{
+        left: 50%;
+        transform: translateX(-50%);
+        top: -30px;
+        
+    }
+    #close{
+        font-size: 8px;
+        bottom: 15px;
+        position: absolute;
+        left: 90%;
+        transform: translateX(-90%);
+    }
+}
+
