--- a/style.css
+++ b/style.css
@@ -721,8 +721,9 @@ header span {
     }
     .chat-box span{
         font-size: 12px;
-        margin-left: 12px;
-        margin-top: 35px;
+        margin-left: 20px;
+        margin-top: 32px;
+        margin-right: 20px;
        
     }
     .chat-box::after{
@@ -737,6 +738,88 @@ header span {
         position: absolute;
         left: 90%;
         transform: translateX(-90%);
+    }
+    .profile{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+       
+    }
+    .user-area{
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+        margin-left: 0;
+
+    }
+    .profile-pic-area{
+        display: flex;
+        justify-content: center;
+        width: 320px;
+        height: 320px;
+    }
+    .profile-pic-area img{
+        width: 100%;
+        height: 100%;
+        max-width: none;
+        max-height: 40vh;
+    }
+    .bio-area{
+        max-width: 320px;
+        text-align: center;
+        margin-top: 20px;
+        margin-left: 0;
+    }
+    .info-localization{
+        display: flex;
+        justify-content: center;
+    }
+    .info{
+        display: flex;
+        text-align: center;
+        align-items: center;
+        margin-top: 15px;
+    }
+    .stats-profile{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .btn-stats{
+        margin-right: 0;
+    }
+    #ChangeUser{
+        position: relative;
+        right: 25%;
+        margin-left: 50%;
+        margin-top: 45px;
+      
+      
+    }
+    .stats{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .stats img{
+        width: 100%;
+        padding: 20px;
+    }
+    #stats-img-languages{
+        margin-left: 0;
+    }
+    .content-extra{
+        flex-direction: column;
+    }
+    .ext{
+        align-items: center;
+    }
+    .Readme{
+        margin: 0;
+        margin-top: 20px;
+        padding: 15px;
+        text-align: center;
     }
 }
 
