--- a/style.css
+++ b/style.css
@@ -762,7 +762,7 @@ header span {
     .profile-pic-area img{
         width: 100%;
         height: 100%;
-        max-width: none;
+        max-width:80vw;
         max-height: 40vh;
     }
     .bio-area{
@@ -804,7 +804,7 @@ header span {
     }
     .stats img{
         width: 100%;
-        padding: 20px;
+        padding: 10px;
     }
     #stats-img-languages{
         margin-left: 0;
@@ -817,9 +817,26 @@ header span {
     }
     .Readme{
         margin: 0;
-        margin-top: 20px;
-        padding: 15px;
+        margin-top: 40px;
+       
         text-align: center;
+        
+    }
+    .modalErrServer{
+        width: auto;
+        padding: 0 60px;
+        font-size: 14px;
+        margin: 0 1em;
+    }
+    .container{
+        padding: 0;
+        width: 100%;
+    }
+    #README_{
+        max-width: 320px;
+    }
+    .stats img{
+        margin-top: 0;
     }
 }
 
