--- a/style.css
+++ b/style.css
@@ -748,7 +748,7 @@ header span {
     }
     .user-area{
         display: flex;
-        margin-top: 30px;
+        margin-top: 10px;
         align-items: center;
         margin-left: 0;
 
@@ -762,7 +762,7 @@ header span {
     .profile-pic-area img{
         width: 100%;
         height: 100%;
-        max-width:80vw;
+        max-width:70vw;
         max-height: 40vh;
     }
     .bio-area{
@@ -831,9 +831,10 @@ header span {
     .container{
         padding: 0;
         width: 100%;
+        margin-top: 0;
     }
     #README_{
-        max-width: 320px;
+        max-width: 100%;
     }
     .stats img{
         margin-top: 0;
